feat: adding nullifierSessionId
