# api/api.yaml
@@ -348,6 +348,8 @@ components:
           example: 'credentialAtomicQuerySigV2'
         query:
           $ref: '#/components/schemas/Query'
+        params:
+          $ref: '#/components/schemas/ScopeParams'
       example:
         {
           "circuitID": "credentialAtomicQuerySigV2",
@@ -413,6 +415,15 @@ components:
           example: 'credentialAtomicQuerySigV2'
         query:
           $ref: '#/components/schemas/Query'
+        params:
+          $ref: '#/components/schemas/ScopeParams'
+
+    ScopeParams:
+      type: object
+      example:
+        {
+          "nullifierSessionId": "123443290439234342342423423423423"
+        }
 
 
     TransactionDataResponse:
